docs: add tip for plugin development

--- a/apps/website/docs/en/plugin/system/plugin-api.mdx
+++ b/apps/website/docs/en/plugin/system/plugin-api.mdx
@@ -2,6 +2,10 @@
 
 In the previous section, we introduced the basic structure of the plugin. In this section, we will introduce the API of the plugin to help you understand the abilities of the plugin in more detail.
 
+:::tip TIP
+In order to get better type hints, you can install `@rspress/shared` in the project, and then import the `RspressPlugin` type through `import { RspressPlugin } from '@rspress/shared'`.
+:::
+
 ### globalStyles
 
 - **Type**：`string`
