--- a/packages/document/docs/zh/guide/start/introduction.mdx
+++ b/packages/document/docs/zh/guide/start/introduction.mdx
@@ -4,9 +4,7 @@
 
 Rspress 是一个面向**文档站场景**的前端框架，它的目标是给开发者提供一个`简单`、`高效`、`可扩展`的文档站解决方案。
 
-该文档框架的初衷是给公司内部的技术产品提供文档站搭建的解决方案，并满足内部的一些特殊需求，如`跨站点搜索服务`等。而对于常见的文档站搭建需求，我们也做了比较完整的支持，比如**支持多语言**、**全文搜索**、**自定义主题**等等。
-
-同时，框架基于 [Rspack](https://rspack.dev/) 来进行项目构建，性能优秀，让你在数秒内就能启动和构建一个文档站。
+框架基于 [Rspack](https://rspack.dev/) 来进行项目构建，性能优秀，让你在数秒内就能启动和构建一个文档站。
 
 ## 功能特性
 
