feat: replace prefix keyword to rspress

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -160,9 +160,9 @@ import { defineConfig } from 'rspress/config';
 export default defineConfig({
   // Turn off image zoom
   mediumZoom: false,
-  // Configure the CSS selector to customize the picture to be zoomed, the default is '.modern-doc img'
+  // Configure the CSS selector to customize the picture to be zoomed, the default is '.rspress-doc img'
   mediumZoom: {
-    selector: '.modern-doc img',
+    selector: '.rspress-doc img',
   },
 });
 ```
