--- a/packages/document/docs/en/guide/basic/global-styles.mdx
+++ b/packages/document/docs/en/guide/basic/global-styles.mdx
@@ -20,7 +20,7 @@ Then you can add the following code:
 ```css
 /* styles/index.css */
 :root {
-  --modern-c-brand: #f00;
+  --rp-c-brand: #f00;
 }
 ```
 
@@ -33,23 +33,23 @@ Below are some commonly used global styles:
 
 :root {
   /* Modify the theme color */
-  --modern-c-brand: #f00;
-  --modern-c-brand-dark: #ffa500;
-  --modern-c-brand-darker: #c26c1d;
-  --modern-c-brand-light: #f2a65a;
-  --modern-c-brand-lighter: #f2a65a;
+  --rp-c-brand: #f00;
+  --rp-c-brand-dark: #ffa500;
+  --rp-c-brand-darker: #c26c1d;
+  --rp-c-brand-light: #f2a65a;
+  --rp-c-brand-lighter: #f2a65a;
 
   /* Modify the width of the left sidebar */
-  --modern-sidebar-width: 280px;
+  --rp-sidebar-width: 280px;
 
   /* Modify the width of the right outline column */
-  --modern-aside-width: 256px;
+  --rp-aside-width: 256px;
 
   /* Modify the code block title background */
-  --modern-code-title-bg: rgba(250, 192, 61, 0.15);
+  --rp-code-title-bg: rgba(250, 192, 61, 0.15);
 
   /* Modify the code block content background */
-  --modern-code-block-bg: rgba(214, 188, 70, 0.05);
+  --rp-code-block-bg: rgba(214, 188, 70, 0.05);
 }
 ```
 
