--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -160,9 +160,9 @@ import { defineConfig } from 'rspress/config';
 export default defineConfig({
   // 关闭图片放大功能
   mediumZoom: false,
-  // 配置 CSS 选择器，自定义要放大的图片，默认为 '.modern-doc img'
+  // 配置 CSS 选择器，自定义要放大的图片，默认为 '.rspress-doc img'
   mediumZoom: {
-    selector: '.modern-doc img',
+    selector: '.rspress-doc img',
   },
 });
 ```
