--- a/packages/document/docs/zh/guide/basic/global-styles.mdx
+++ b/packages/document/docs/zh/guide/basic/global-styles.mdx
@@ -20,7 +20,7 @@ export default defineConfig({
 ```css
 /* styles/index.css */
 :root {
-  --modern-c-brand: #f00;
+  --rp-c-brand: #f00;
 }
 ```
 
@@ -33,20 +33,20 @@ export default defineConfig({
 
 :root {
   /* 修改主题色 */
-  --modern-c-brand: #f00;
-  --modern-c-brand-dark: #ffa500;
-  --modern-c-brand-darker: #c26c1d;
-  --modern-c-brand-light: #f2a65a;
-  --modern-c-brand-lighter: #f2a65a;
+  --rp-c-brand: #f00;
+  --rp-c-brand-dark: #ffa500;
+  --rp-c-brand-darker: #c26c1d;
+  --rp-c-brand-light: #f2a65a;
+  --rp-c-brand-lighter: #f2a65a;
   /* 修改左侧侧边栏宽度 */
-  --modern-sidebar-width: 280px;
+  --rp-sidebar-width: 280px;
   /* 修改右侧大纲栏宽度 */
-  --modern-aside-width: 256px;
+  --rp-aside-width: 256px;
   /* 修改代码块标题背景 */
-  --modern-code-title-bg: rgba(250, 192, 61, 0.15);
+  --rp-code-title-bg: rgba(250, 192, 61, 0.15);
   /* 修改代码块内容背景 */
-  --modern-code-block-bg: rgba(214, 188, 70, 0.05);
+  --rp-code-block-bg: rgba(214, 188, 70, 0.05);
 }
 ```
 
-> 如果想了解更多内部的全局样式，可以查看[vars.css](https://github.com/web-infra-dev/modern.js/blob/main/packages/cli/doc-core/src/theme-default/styles/vars.css)。
+> 如果想了解更多内部的全局样式，可以查看 [vars.css](https://github.com/web-infra-dev/rspress/blob/main/packages/core/src/theme-default/styles/vars.css)
