--- a/packages/document/docs/en/plugin/system/plugin-api.mdx
+++ b/packages/document/docs/en/plugin/system/plugin-api.mdx
@@ -31,11 +31,11 @@ For example, if you want to modify the theme color, you can do so by adding a gl
 
 ```css title="global.css"
 :root {
-  --modern-c-brand: #ffa500;
-  --modern-c-brand-dark: #ffa500;
-  --modern-c-brand-darker: #c26c1d;
-  --modern-c-brand-light: #f2a65a;
-  --modern-c-brand-lighter: #f2a65a;
+  --rp-c-brand: #ffa500;
+  --rp-c-brand-dark: #ffa500;
+  --rp-c-brand-darker: #c26c1d;
+  --rp-c-brand-light: #f2a65a;
+  --rp-c-brand-lighter: #f2a65a;
 }
 ```
 
