--- a/packages/document/docs/zh/plugin/system/plugin-api.mdx
+++ b/packages/document/docs/zh/plugin/system/plugin-api.mdx
@@ -32,11 +32,11 @@ export function pluginForDoc(): RspressPlugin {
 
 ```css title="global.css"
 :root {
-  --modern-c-brand: #ffa500;
-  --modern-c-brand-dark: #ffa500;
-  --modern-c-brand-darker: #c26c1d;
-  --modern-c-brand-light: #f2a65a;
-  --modern-c-brand-lighter: #f2a65a;
+  --rp-c-brand: #ffa500;
+  --rp-c-brand-dark: #ffa500;
+  --rp-c-brand-darker: #c26c1d;
+  --rp-c-brand-light: #f2a65a;
+  --rp-c-brand-lighter: #f2a65a;
 }
 ```
 
