chore: update doc

--- a/packages/document/docs/en/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx.mdx
@@ -74,6 +74,10 @@ This is a `block` of type `warning`
 This is a `block` of type `danger`
 :::
 
+::: details
+This is a `block` of type `details`
+:::
+
 :::tip Custom Title
 This is a `block` of `Custom Title`
 :::
@@ -99,6 +103,10 @@ This is a `block` of type `warning`
 
 :::danger
 This is a `block` of type `danger`
+:::
+
+::: details
+This is a `block` of type `details`
 :::
 
 :::tip Custom Title
