--- a/packages/document/docs/zh/guide/basic/use-mdx.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx.mdx
@@ -59,19 +59,23 @@ title: Hello World
 
 ```markdown
 :::tip
-这是一个`tip`类型的`block`
+这是一个 `tip` 类型的 `block`
 :::
 
 :::info
-这是一个`info`类型的`block`
+这是一个 `info` 类型的 `block`
 :::
 
 :::warning
-这是一个`warning`类型的`block`
+这是一个 `warning` 类型的 `block`
 :::
 
 :::danger
-这是一个`danger`类型的`block`
+这是一个 `danger` 类型的 `block`
+:::
+
+::: details
+这是一个 `details` of type `block`
 :::
 
 :::tip 自定义标题
@@ -99,6 +103,10 @@ title: Hello World
 
 :::danger
 这是一个 `danger` 类型的 `block`
+:::
+
+::: details
+这是一个 `details` of type `block`
 :::
 
 :::tip 自定义标题
