docs: change doc-plugin-typedoc to plugin-typedoc

--- a/packages/document/docs/en/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/overview.mdx
@@ -2,4 +2,4 @@
 
 Official plugins include the following:
 
-- [@rspress/doc-plugin-typedoc](./typedoc)：Integrate [TypeDoc](https://github.com/TypeStrong/typedoc), used to generate API documentation of TS module automatically.
+- [@rspress/plugin-typedoc](./typedoc)：Integrate [TypeDoc](https://github.com/TypeStrong/typedoc), used to generate API documentation of TS module automatically.
