--- a/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
@@ -1,4 +1,4 @@
-# @rspress/doc-plugin-typedoc
+# @rspress/plugin-typedoc
 
 Integration of [TypeDoc](https://github.com/TypeStrong/typedoc)'s Rspress Plugin for Automatically Generating API Documentation for TS Modules.
 
@@ -6,18 +6,18 @@ Integration of [TypeDoc](https://github.com/TypeStrong/typedoc)'s Rspress Plugin
 
 ```bash
 # npm
-npm install @rspress/doc-plugin-typedoc
+npm install @rspress/plugin-typedoc
 # yarn
-yarn add @rspress/doc-plugin-typedoc
+yarn add @rspress/plugin-typedoc
 # pnpm
-pnpm install @rspress/doc-plugin-typedoc
+pnpm install @rspress/plugin-typedoc
 ```
 
 ## Usage
 
 ```ts
 import { defineConfig } from 'rspress/config';
-import { pluginTypeDoc } from '@rspress/doc-plugin-typedoc';
+import { pluginTypeDoc } from '@rspress/plugin-typedoc';
 import path from 'path';
 
 export default defineConfig({
