--- a/packages/document/docs/en/guide/basic/ssg.mdx
+++ b/packages/document/docs/en/guide/basic/ssg.mdx
@@ -59,3 +59,13 @@ export default defineConfig({
 ```
 
 For more detailed config of `builderConfig.html.tags`, please refer to the [documentation](https://modernjs.dev/builder/en/api/config-html.html#htmltags).
+
+## Preview
+
+After the production build is complete, you can preview the output by using the `rspress preview` command. This command will start a local static site service, and you can access this service in your browser to preview the output.
+
+```shell
+> rspress preview
+
+Preview server running at http://localhost:4173/
+```
