--- a/packages/document/docs/zh/guide/basic/ssg.mdx
+++ b/packages/document/docs/zh/guide/basic/ssg.mdx
@@ -59,3 +59,13 @@ export default defineConfig({
 ```
 
 关于 `builderConfig.html.tags` 更详细的配置，请参考 [文档](https://modernjs.dev/builder/api/config-html.html#htmltags)。
+
+## 预览产物
+
+在生产环境构建完成之后，你可以通过 `rspress preview` 命令来预览产物，这个命令会启动一个本地的静态站点服务，你可以在浏览器中访问这个服务来预览产物。
+
+```shell
+> rspress preview
+
+Preview server running at http://localhost:4173/
+```
