--- a/packages/document/docs/zh/plugin/official-plugins/overview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/overview.mdx
@@ -2,4 +2,8 @@
 
 官方插件包括如下:
 
+- [@rspress/plugin-medium-zoom](./medium-zoom)： [medium-zoom](https://github.com/francoischalifour/medium-zoom) 集成插件，用于支持 MediumZoom 图片放大效果。
+- [@rspress/plugin-last-updated](./last-updated)： 支持显示最后更新时间。
+- [@rspress/plugin-container-syntax](./container-syntax)： 支持在 Markdown/MDX 中使用 `:::` container 语法。
 - [@rspress/plugin-typedoc](./typedoc)： [TypeDoc](https://github.com/TypeStrong/typedoc) 集成插件，用于自动生成 TS 模块的 API 文档。
+- [@rspress/plugin-preview](./preview)：支持代码块中的组件预览。
