docs: add plugin source code link

--- a/packages/document/docs/en/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/preview.mdx
@@ -1,5 +1,7 @@
 # @rspress/plugin-preview
 
+> [Source Code](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-preview)
+
 Used to preview components in the code block of md(x) files.
 
 ## Installation
