--- a/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
@@ -1,5 +1,7 @@
 # @rspress/plugin-typedoc
 
+> [Source Code](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc)
+
 Integration of [TypeDoc](https://github.com/TypeStrong/typedoc)'s Rspress Plugin for Automatically Generating API Documentation for TS Modules.
 
 ## Installation
