--- a/packages/document/docs/zh/plugin/official-plugins/preview.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/preview.mdx
@@ -1,5 +1,7 @@
 # @rspress/plugin-preview
 
+> [源码地址](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-preview)
+
 用于预览 md(x) 文件代码块中的组件。
 
 ## 安装
