--- a/packages/document/docs/zh/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/typedoc.mdx
@@ -1,5 +1,7 @@
 # @rspress/plugin-typedoc
 
+> [源码地址](https://github.com/web-infra-dev/rspress/tree/main/packages/plugin-typedoc)
+
 集成 [TypeDoc](https://github.com/TypeStrong/typedoc) 的 Rspress 插件，用于自动生成 TS 模块的 API 文档。
 
 ## 安装
