--- a/packages/document/docs/en/guide/basic/deploy.mdx
+++ b/packages/document/docs/en/guide/basic/deploy.mdx
@@ -1,4 +1,4 @@
-# Project Deployment
+# Deployment
 
 In this section, we will discuss the deployment of the project. We assume that you have completed the development of the project and now need to deploy the project online. You need to consider the following aspects:
 
