--- a/packages/document/docs/en/guide/basic/deploy.mdx
+++ b/packages/document/docs/en/guide/basic/deploy.mdx
@@ -2,10 +2,10 @@
 
 In this section, we will discuss the deployment of the project. We assume that you have completed the development of the project and now need to deploy the project online. You need to consider the following aspects:
 
-- Production build and preview of the project
-- Static resource prefix configuration
-- Project base path configuration
-- Choose deployment platform for deployment
+- Production build and preview of the project.
+- Static resource prefix configuration.
+- Project base path configuration.
+- Choose deployment platform for deployment.
 
 ## Build and Preview
 
