--- a/packages/document/docs/zh/guide/basic/deploy.mdx
+++ b/packages/document/docs/zh/guide/basic/deploy.mdx
@@ -2,10 +2,10 @@
 
 这一节我们将来讲解项目的部署环节，我们假定你已经完成了项目的开发，现在需要将项目部署到线上。你需要考虑如下的方面：
 
-- 项目生产环境构建和预览
-- 静态资源前缀配置
-- 项目基路径配置
-- 选择部署平台进行部署
+- 项目生产环境构建和预览；
+- 静态资源前缀配置；
+- 项目基路径配置；
+- 选择部署平台进行部署。
 
 ## 项目生产环境构建和预览
 
