feat: add new component

--- a/packages/document/docs/en/fragments/internal-components.mdx
+++ b/packages/document/docs/en/fragments/internal-components.mdx
@@ -72,3 +72,9 @@ interface TabProps {
 ```
 
 The `value` field is used to identify the current tab, if not passed, the default label will be used.
+
+## Toc
+
+import { Toc } from '@theme'
+
+<Toc />
