--- a/packages/document/docs/en/fragments/internal-components.mdx
+++ b/packages/document/docs/en/fragments/internal-components.mdx
@@ -73,7 +73,15 @@ interface TabProps {
 
 The `value` field is used to identify the current tab, if not passed, the default label will be used.
 
-## Toc
+## Table of Contents
+
+Render TOC of current page
+
+```tsx title="index.mdx"
+import { Toc } from '@theme'
+
+<Toc />
+```
 
 import { Toc } from '@theme'
 
