--- a/packages/document/docs/zh/fragments/internal-components.mdx
+++ b/packages/document/docs/zh/fragments/internal-components.mdx
@@ -72,3 +72,17 @@ interface TabProps {
 ```
 
 其中的 `value` 字段用于标识当前 tab，如果不传则默认使用 label。
+
+## Table of Contents
+
+渲染当前页面的 TOC
+
+```tsx title="index.mdx"
+import { Toc } from '@theme'
+
+<Toc />
+```
+
+import { Toc } from '@theme'
+
+<Toc />
