--- a/packages/document/docs/zh/fragments/internal-components.mdx
+++ b/packages/document/docs/zh/fragments/internal-components.mdx
@@ -78,9 +78,13 @@ interface TabProps {
 渲染当前页面的 TOC
 
 ```tsx title="index.mdx"
-import { Toc } from '@theme'
+import { Toc } from '@theme';
 
-<Toc />
+function App() {
+  return (
+    <Toc />
+  );
+}
 ```
 
 import { Toc } from '@theme'
