--- a/packages/document/docs/en/fragments/internal-components.mdx
+++ b/packages/document/docs/en/fragments/internal-components.mdx
@@ -78,9 +78,13 @@ The `value` field is used to identify the current tab, if not passed, the defaul
 Render TOC of current page
 
 ```tsx title="index.mdx"
-import { Toc } from '@theme'
+import { Toc } from '@theme';
 
-<Toc />
+function App() {
+  return (
+    <Toc />
+  );
+}
 ```
 
 import { Toc } from '@theme'
