--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -1,6 +1,6 @@
 # Quick Start
 
-import { PackageManagerTabs, Tab } from '@/components/PackageManagerTabs';
+import { PackageManagerTabs } from '@theme';
 
 ## 1. Initialize the project
 
@@ -8,33 +8,7 @@ import { PackageManagerTabs, Tab } from '@/components/PackageManagerTabs';
 
 You can create a Rspress project using the `create-rspress` cli:
 
-<PackageManagerTabs>
-
-  <Tab>
-
-```sh
-npm create rspress@latest
-```
-
-  </Tab>
-
-  <Tab>
-
-```sh
-yarn create rspress
-```
-
-  </Tab>
-
-  <Tab>
-
-```sh
-pnpm create rspress@latest
-```
-
-  </Tab>
-
-</PackageManagerTabs>
+<PackageManagerTabs command="create rspress@latest" />
 
 Input the project directory name, and then the cli will create the project for you.
 
@@ -48,33 +22,7 @@ mkdir rspress-app && cd rspress-app
 
 Execute `npm init -y` to initialize a project. You can install Rspress using npm, yarn or pnpm:
 
-<PackageManagerTabs>
-
-  <Tab>
-
-```sh
-npm install rspress typescript ts-node -D
-```
-
-  </Tab>
-
-<Tab>
-
-```sh
-yarn add rspress typescript ts-node -D
-```
-
-</Tab>
-
-<Tab>
-
-```sh
-pnpm install rspress typescript ts-node -D
-```
-
-</Tab>
-
-</PackageManagerTabs>
+<PackageManagerTabs command="install rspress typescript ts-node -D" />
 
 Then create the file with the following command
 
