--- a/packages/document/docs/zh/plugin/official-plugins/playground.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/playground.mdx
@@ -31,7 +31,8 @@ export default defineConfig({
 ```
 
 :::warning 注意
-在加入该插件后，请勿开启 `markdown.experimentalMdxRs`配置，否则会导致插件失效。
+1. 在加入该插件后，请勿开启 `markdown.experimentalMdxRs`配置，否则会导致插件失效。
+2. 请不要同时使用该插件与 preview 插件。
 :::
 
 ### 内部组件
